# periodictable

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
code_generation_from_python/: create_element_files.py  element.rs  isotope.rs  mass.rs  mass_to_rust.py  neutron_scattering_factors.rs  nsf_to_rust.py  rust_masses.rs  rust_nsf.rs
code_generation_from_python/element_files/: Ac.rs  Ag.rs  Al.rs  Am.rs  Ar.rs  As.rs  At.rs  Au.rs  B.rs  Ba.rs  Be.rs  Bh.rs  Bi.rs  Bk.rs  Br.rs  C.rs  Ca.rs  Cd.rs  Ce.rs  Cf.rs  Cl.rs  Cm.rs  Cn.rs  Co.rs  Cr.rs  Cs.rs  Cu.rs  Db.rs  Ds.rs  Dy.rs  Er.rs  Es.rs  Eu.rs  F.rs  Fe.rs  Fl.rs  Fm.rs  Fr.rs  Ga.rs  Gd.rs  (+79 more)
src/: constants.rs  element.rs  element_basic_info.rs  element_neutron_scattering.rs  isotope.rs  lib.rs  mass.rs  neutron_sf.rs  table.rs  utils.rs  xray_sf.rs
src/elements/: Ac.rs  Ag.rs  Al.rs  Am.rs  Ar.rs  As.rs  At.rs  Au.rs  B.rs  Ba.rs  Be.rs  Bh.rs  Bi.rs  Bk.rs  Br.rs  C.rs  Ca.rs  Cd.rs  Ce.rs  Cf.rs  Cl.rs  Cm.rs  Cn.rs  Co.rs  Cr.rs  Cs.rs  Cu.rs  Db.rs  Ds.rs  Dy.rs  Er.rs  Es.rs  Eu.rs  F.rs  Fe.rs  Fl.rs  Fm.rs  Fr.rs  Ga.rs  Gd.rs  (+80 more)
